chore: initial native-image/swt scaffolding